[package]
name = "pizzatopia"
version = "0.0.1"
authors = []
edition = "2018"
build = "build.rs"

[dependencies]
amethyst = "^0.15"
#amethyst = {  git = "https://github.com/amethyst/amethyst.git", branch = "master", features = ["vulkan", "no-slow-safety-checks"]}
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
derivative = "1.0.3"
ron = "0.5.1"
num-traits = "0.1.43"
strum = "0.18.0"
strum_macros = "0.18.0"
rstar = "0.8.0"

[features]
 default = ["vulkan", "sdl_controller", "no-slow"]
 vulkan = ["amethyst/vulkan"]
 sdl_controller = ["amethyst/sdl_controller"]
 profiler = ["amethyst/profiler"]
 no-slow = ["amethyst/no-slow-safety-checks"]
