[package]
name = "pizzatopia"
version = "0.0.1"
authors = ["Yanik Lyth <yanik.lyth@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
pizzatopia_utils = { path = "./pizzatopia_utils/" }
#amethyst = {  git = "https://github.com/amethyst/amethyst.git", branch = "master", features = ["vulkan", "no-slow-safety-checks"]}
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
derivative = "1.0.3"
ron = "0.5.1"
num-traits = "0.1.43"
strum = "0.18.0"
strum_macros = "0.18.0"
rstar = "0.8.0"
rand = "0.7.3"
ultraviolet = { git="https://github.com/termhn/ultraviolet", features = ["serde"] }

[dependencies.amethyst]
 version = "0.15.0"
 default-features = false
 features = [
   "vulkan",
   "sdl_controller",
   "no-slow-safety-checks",
   "animation",
   "audio",
   "renderer",
#   "profiler",
 ]
