[package]
name = "pizzatopia_input"
version = "0.1.0"
authors = ["Yanik <lyty2101@usherbrooke.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.1.1"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }

[dependencies.amethyst]
version = "0.15.0"
default-features = false
features = ["empty"]
