[package]
name = "pizzatopia_input"
version = "0.1.0"
authors = ["Yanik <lyty2101@usherbrooke.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
gilrs = { version = "0.7.4", optional = true }

[dependencies.amethyst]
version = "0.15.0"
default-features = false
