[package]
name = "pizzatopia_utils"
version = "0.1.0"
authors = ["Yanik <lyty2101@usherbrooke.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pizzatopia_derive = { path = "./pizzatopia_derive" }
strum = "0.18.0"
strum_macros = "0.18.0"
